--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <!--title-->
-    <title>AppCo App Landing Page Template</title>
+    <title>ZOE Community - Landing Page Under Construction</title>
 
     <!--favicon icon-->
-    <link rel="icon" href="/assets/img/favicon.png" type="image/png" sizes="16x16">
+    <!-- <link rel="icon" href="/assets/img/favicon.png" type="image/png" sizes="16x16"> -->
 
     <!--google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700%7COpen+Sans&display=swap"
